Finished site except classes.

--- a/frontend/src/css/app.scss
+++ b/frontend/src/css/app.scss
@@ -5,8 +5,8 @@
 }
 
 .banner {
-    background-image: url(/images/banner-background.jpeg);
-    background-repeat: repeat-x;
+    font-family: 'Montserrat', sans-serif;
+    background-color: #7e79b8;
     height: 200px;
 }
 
